# Shmup

./: .gitignore  README  README.md
data/: config.cfg  configAndroid.cfg  materials.lbr
data/cameraPath/: act1.cp.cp2b  act2.cp  act2.cp.cp2b  act3.cp  act3.cp.cp2b  intro.backup.cp  tutorial.cp  tutorial.cp.cp2b
data/commandRecord/: tutorial_swip.scene.io
data/data/cameraPath/: act1.cp  intro.cp  intro.cp.cp2b
data/data/commandRecord/: 01act1.scene.io  tutorial_pad.scene.io
data/data/map/: act2.map
data/data/materials/: act1_pvr.mtl  players.mtl  tutorial.mtl
data/data/models/act1/: SkyDome_Night.obj.md5mesh  city_beta.obj.md5mesh
data/data/models/act2/: cityAkira.obj.md5mesh
data/data/models/enemies/: fht.obj.md5mesh  lofb.obj.md5mesh  shab.obj.md5mesh
data/data/models/misc/: guyless.obj.md5mesh
data/data/scenes/: act1.scene  act2.scene  demo.scene  tutorial_swip.scene
data/data/scenes/android/: tutorial_swip.scene
data/data/shaders/: f_bump.glsl  f_bumpShadow.glsl  f_shadowMapGenerator.glsl  f_simple.glsl  f_text.glsl  f_uber.glsl  v_bumpShadow.glsl  v_shadowMapGenerator.glsl  v_simple.glsl
data/data/texturesPVR/act1/: SkyDome_Evening.pvr  SkyDome_Night.pvr  cityBlue_2bbp.pvr  skydome.pvr
data/data/texturesPVR/enemies/: fht.pvr
data/data/texturesPVR/object/: default_256_d.pvr  default_256_local.pvr  default_256_s.pvr  p1.pvr  p2.pvr  spritesBullets.4bpp.pvr
data/data/texturesPVR/sprites/: SquaredualGhost.pvr  ghost.pvr  impact.pvr
data/map/: act1.map  intro.map  tutorial.map
data/materials/: act1.mtl  act2.mtl  act2_pvr.mtl  enemies.mtl  enemies_pvr.mtl  intro.mtl  intro_pvr.mtl  players_pvr.mtl  tutorial.mtl  tutorial_pvr.mtl
data/models/act1/: SkyDome_Evening.obj.md5mesh  cityBlue.obj.md5mesh  skydome.obj.md5mesh
data/models/enemies/: hab.obj.md5mesh  lee.obj.md5mesh  tha.obj.md5mesh
data/models/players/: hpp.obj.md5mesh  p1.obj.md5mesh  p2.obj.md5mesh
data/models/tutorial/: background.obj.md5mesh  city_white.obj.md5mesh
data/scenes/: act3.scene  demo.scene  intro.scene  tutorial_pad.scene
data/scenes/android/: tutorial_pad.scene
data/shaders/: v_bump.glsl  v_text.glsl  v_uber.glsl
data/texturesPVR/act1/: city.pvr  cityBlue_4bbp.pvr  city_beta.pvr
data/texturesPVR/act2/: cityAkira.pvr
data/texturesPVR/enemies/: hab.pvr  lee.pvr  lofb.pvr  tha.pvr
data/texturesPVR/object/: hpp1.pvr  p22.pvr
data/texturesPVR/sprites/: smoke512.pvr
engine/: .gitignore  dEngine_Prefix.pch  shmup.plist  shmupLite.plist
engine/Resources-iPad/srciPhone/: MainWindow-iPad.xib
engine/Shmup/Images.xcassets/AppIcon-Shmup.appiconset/: Contents.json
engine/Shmup/Images.xcassets/LaunchImage-Shmup.launchimage/: Contents.json
engine/android/: .project  AndroidManifest.xml  settings.gradle
engine/android/app/: build.gradle
engine/android/app/src/main/: AndroidManifest.xml
engine/android/app/src/main/cpp/: CMakeLists.txt
engine/android/gradle/wrapper/: gradle-wrapper.properties
engine/android/jni/: Android.mk  Application.mk
engine/android/jni/android/: android_URL.c  android_display.c  android_display.h  android_filesystem.c  android_filesystem.h  android_main.c  android_music.c  android_native.c  native_app_glue.c  native_app_glue.h
engine/android/jni/libpng/: Android.mk
engine/android/src/net/fabiensanglard/: Launcher.java
engine/androidLite/: .project  AndroidManifest.xml
engine/androidLite/jni/: Android.mk  Application.mk
engine/androidLite/res/values/: strings.xml
engine/dEngine.xcodeproj/: fabiensanglard.pbxuser  project.pbxproj
engine/dEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
engine/iOS/: dEngineAppDelegate.h  dEngineAppDelegate.m  main.m
engine/iOS/AQ/: AQPlayer.mm  CADebugMacros.h  CAStreamBasicDescription.cpp
engine/iOS/Shmup/Images.xcassets/AppIcon-ShmupLite.appiconset/: Contents.json
engine/iOS/dEngine.xcodeproj/: fabiensanglard.mode1v3
engine/linux/: Makefile  Makefile.gles  README  README.gles  main.c  native.c
engine/macosx/libpng/src/: pnglibconf.h
engine/macosx/macosx/: AppDelegate.h  AppDelegate.m  MyOpenGLView.h  MyOpenGLView.m  WindowsDelegate.h  WindowsDelegate.m  macosx-Info.plist  macosx-Prefix.pch  macosx_native.c  main.m  native_music.mm  native_png.mm
engine/macosx/macosx.xcodeproj/: project.pbxproj
engine/macosx/macosx/en.lproj/: MainMenu.xib
engine/oldAndroid/android/: AndroidManifest.xml
engine/oldAndroid/android/jni/: Android.mk
engine/oldAndroid/androidLite/jni/: Android.mk
engine/src/: ItextureLoader.c  ItextureLoader.h  camera.c  camera.h  collisions.c  collisions.h  commands.c  commands.h  config.c  config.h  dEngine.c  dEngine.h  enemy.c  enemy.h  enemy_particules.c  enemy_particules.h  entities.c  entities.h  event.c  event.h  fht.c  fht.h  filesystem.c  filesystem.h  fx.c  fx.h  globals.h  io_interface.c  io_interface.h  lee.c  lee.h  lexer.c  lexer.h  lofb.c  lofb.h  log.c  log.h  material.c  material.h  math.c  (+54 more)
engine/src/android/: android_URL.c  android_display.c  android_filesystem.c  android_filesystem.h  android_main.c
engine/src/filesystem/: filesystem.c
engine/src/libpng/: Android.mk  png.h
engine/srciPhone/: AQ.h  AQ.mm  EAGLView.h  EAGLView.m  MainWindow.xib  dEngineAppDelegate.h  dEngineAppDelegate.m  main.m
engine/srciPhone/AQ/: AQPlayer.h  AQPlayer.mm  CADebugMacros.cpp  CAXException.h
engine/srciPhone/Settings.bundle/: Root.plist
engine/win32/: main.c  main.cpp  native.c  win32EGL.cpp  win32EGL.h
engine/win32/dEngine/: dEngine.sln  dEngine.vs2010.sln
engine/win32/dEngine/dEngine/: dEngine.vcproj  dEngine.vcxproj  dEngine.vcxproj.filters
(+12 files in other folders)
